Fix our services alignment for desktop

--- a/css/style.css
+++ b/css/style.css
@@ -246,10 +246,12 @@ section {
 .info-holder .subtitle {
   font-weight: bold;
   margin: 0;
+  max-width: 100%;
 }
 
 .info-holder p {
-  margin: 0;
+  margin: 0 auto;
+  max-width: 300px;
 }
 
 /*///SECTION TWO STYLING///*/
